css/navbar.css
.navbar {
    display: flex;
    justify-content: space-between;
    > ul {
        align-items: absolute;
    }

    padding: 15px 20px;
    background: #222;
    color:  rgb(255, 167, 2);
}

.navbar ul {
    display: flex;
    gap: 20px;
    list-style: none;
}

.navbar a {
    color: rgb(255, 167, 2);
    text-decoration: none;
}

#darkModeContainer {
    display: flex;
    gap: 15px;
    align-items: center;
}

